Correction des traductions après le pull

--- a/TestParse/Base.lproj/Main.storyboard
+++ b/TestParse/Base.lproj/Main.storyboard
@@ -2537,6 +2537,10 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="CII-qx-31e"/>
+        <segue reference="85D-2h-GPM"/>
+        <segue reference="pId-s9-PUV"/>
+        <segue reference="6xL-71-AeC"/>
+        <segue reference="gQS-Od-x3H"/>
+        <segue reference="EkG-m5-ZxD"/>
     </inferredMetricsTieBreakers>
 </document>
