--- a/TestParse/Base.lproj/Main.storyboard
+++ b/TestParse/Base.lproj/Main.storyboard
@@ -95,6 +95,7 @@
                                     <outlet property="profilImageView" destination="VtG-jD-SoN" id="qvz-KM-s2a"/>
                                     <outlet property="rsvpSegmentedControl" destination="wV8-JR-7sI" id="dDd-Ms-r8O"/>
                                     <outlet property="whenWhereLabel" destination="UOz-Be-I0f" id="CW8-C5-nLF"/>
+                                    <segue destination="bwP-Lx-Jsp" kind="push" identifier="DetailEvent" id="pYD-9M-pFo"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -2314,12 +2315,12 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jep-VS-mLR">
-                                                    <rect key="frame" x="31" y="10" width="54" height="30"/>
+                                                    <rect key="frame" x="15" y="10" width="54" height="30"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" image="btn_like">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
-                                                    <state key="selected" image="btn_comment"/>
+                                                    <state key="selected" image="btn_like_selected"/>
                                                     <connections>
                                                         <action selector="like:" destination="Uxh-P6-mTa" eventType="touchUpInside" id="juD-tv-Tul"/>
                                                     </connections>
@@ -2338,11 +2339,25 @@
                                                         <action selector="more:" destination="Uxh-P6-mTa" eventType="touchUpInside" id="3xx-HG-cCA"/>
                                                     </connections>
                                                 </button>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AEA-dr-a3r">
+                                                    <rect key="frame" x="77" y="11" width="104" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <rect key="contentStretch" x="1.3877787807814457e-17" y="0.0" width="1" height="1"/>
+                                                    <inset key="contentEdgeInsets" minX="-34" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    <state key="normal" title="0 like">
+                                                        <color key="titleColor" red="1" green="0.62745100259999997" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="detailLikes:" destination="Uxh-P6-mTa" eventType="touchUpInside" id="qfx-rJ-nBT"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.96470588239999999" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="likeButton" destination="Jep-VS-mLR" id="fFs-CE-Bg2"/>
+                                            <outlet property="nbPhotosButton" destination="AEA-dr-a3r" id="ZuU-tZ-Ndr"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LikesCell" rowHeight="100" id="uKZ-4Q-T7F" customClass="LikesPhotoCell">
@@ -2352,10 +2367,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="semi_separate" translatesAutoresizingMaskIntoConstraints="NO" id="IcZ-n1-OFJ">
-                                                    <rect key="frame" x="83" y="40" width="237" height="1"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Adrien DUlong" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0h-To-W5d">
                                                     <rect key="frame" x="10" y="-6" width="293" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -2488,8 +2499,8 @@
         <image name="blockevent" width="313" height="183"/>
         <image name="btn_app_photo" width="303" height="40"/>
         <image name="btn_cancel" width="44" height="44"/>
-        <image name="btn_comment" width="54" height="30"/>
         <image name="btn_like" width="54" height="30"/>
+        <image name="btn_like_selected" width="55" height="30"/>
         <image name="btn_photo" width="72" height="72"/>
         <image name="chat" width="18" height="17"/>
         <image name="check" width="20" height="21"/>
@@ -2537,10 +2548,10 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="85D-2h-GPM"/>
-        <segue reference="pId-s9-PUV"/>
         <segue reference="6xL-71-AeC"/>
-        <segue reference="gQS-Od-x3H"/>
+        <segue reference="pYD-9M-pFo"/>
+        <segue reference="pId-s9-PUV"/>
         <segue reference="EkG-m5-ZxD"/>
+        <segue reference="gQS-Od-x3H"/>
     </inferredMetricsTieBreakers>
 </document>
