--- a/TestParse/Base.lproj/Main.storyboard
+++ b/TestParse/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A3017" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="JSE-X3-kZq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B40" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="JSE-X3-kZq">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -1102,10 +1102,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Nr6-sz-Bz4">
-                        <barButtonItem key="rightBarButtonItem" title="Valider" style="plain" id="Kcj-ns-0CQ">
+                        <barButtonItem key="rightBarButtonItem" title="Valider" id="Kcj-ns-0CQ">
                             <color key="tintColor" red="1" green="0.62745100259999997" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                             <connections>
-                                <segue destination="CTI-H4-4ZD" kind="push" identifier="SharePhotos" id="QXy-jn-JYv"/>
+                                <segue destination="CTI-H4-4ZD" kind="push" identifier="SharePhotos" id="gQS-Od-x3H"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
