--- a/TestParse/Base.lproj/Main.storyboard
+++ b/TestParse/Base.lproj/Main.storyboard
@@ -665,8 +665,7 @@
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="195" sectionHeaderHeight="22" sectionFooterHeight="22" id="AyT-6Z-M3g">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="sectionIndexTrackingBackgroundColor" red="0.96862751245498657" green="0.96862751245498657" blue="0.96862751245498657" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="backgroundColor" red="0.96862751245498657" green="0.96862751245498657" blue="0.96862751245498657" alpha="1" colorSpace="deviceRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="195" id="HbY-4L-qCd" customClass="EventsCell">
                                 <rect key="frame" x="0.0" y="86" width="320" height="195"/>
@@ -3433,14 +3432,14 @@ Les Conditions Générales d'Utilisation peuvent être modifiées et/ou complét
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="pId-s9-PUV"/>
-        <segue reference="zHu-yQ-I5R"/>
-        <segue reference="cCH-RC-a7a"/>
         <segue reference="pYD-9M-pFo"/>
-        <segue reference="H4y-UD-BIY"/>
-        <segue reference="EZZ-yh-I9A"/>
+        <segue reference="cCH-RC-a7a"/>
         <segue reference="yK3-OH-GQx"/>
+        <segue reference="EZZ-yh-I9A"/>
         <segue reference="Biz-ZH-3yq"/>
         <segue reference="ZWB-wq-JTW"/>
         <segue reference="17P-5b-VHW"/>
+        <segue reference="H4y-UD-BIY"/>
+        <segue reference="zHu-yQ-I5R"/>
     </inferredMetricsTieBreakers>
 </document>
